Fix github actions CI file
Signed-off-by: Carlos Eduardo Arango Gutierrez <eduardoa@nvidia.com>

--- a/.github/workflows/docs_check.yaml
+++ b/.github/workflows/docs_check.yaml
@@ -15,7 +15,14 @@
 name: Docs
 
 on:
-  workflow_call:
+  workflow_call: {}
+  pull_request:
+    types:
+      - opened
+      - synchronize
+    branches:
+      - main
+      - release-*
 
 jobs:
   lint:
